syntax = "proto3";

package config;

service mediaChannelLauncher {
    rpc LaunchMediaChannel (MediaChannelRequest) returns (MediaChannelResponse);
	rpc StreamMediaChannel (MediaChannelStreamRequestMessage) returns (stream MediaChannelStreamResponseMessage) {}
}

message MediaChannelRequest {
    string command = 1;
}

message MediaChannelResponse {
    string address = 1;
}

message MediaChannelStreamRequestMessage {
	string id = 1;
}

message MediaChannelStreamResponseMessage {
	string id = 1;
    string type = 2;
    string message = 3;
}
